@@ -1,3 +1,9 @@
+2012-12-20  Jan-Benedict Glaw  <jbglaw@lug-owl.de>
+
+	* Makefile.def (install-target-libgo): Depend on
+	install-target-libatomic. Merged from GCC repo.
+	* Makefile.in: Regenerate.
+
 2012-12-17  Jeff Johnston  <jjohnstn@redhat.com>
 
 	* COPYING.LIBGLOSS: Add license for bfin libgloss.
